fix: welcome on tablet

--- a/src/components/top-casinos/OfferCard.module.scss
+++ b/src/components/top-casinos/OfferCard.module.scss
@@ -34,7 +34,7 @@
     font-style: normal;
     font-weight: $font-weight-regular;
     line-height: normal;
-    color: $text-color-fourth;
+    color: #7c99ff;
 
     // background: $text-color-fourth;
     // background-clip: text;
