--- a/src/components/welcome/WelcomeSection.module.scss
+++ b/src/components/welcome/WelcomeSection.module.scss
@@ -18,7 +18,7 @@
     width: 100%;
   }
   @media (max-width: 1240px) {
-    background-size: 50% auto;
+    background-size: 45% auto;
     background-position: right 20px center;
   }
 
